# user_embeddings

./: .gitignore  README.md  main.py  pyproject.toml  repomix.config.json
.cursor/rules/: project.mdc
docs/: assumptions.md  implementation.md  schema.md
docs/_deprecated/: README.md
evaluation/: config.py  evaluate_llm_outputs.py  llm_rank_benchmark.py  prompt_adherence.py  prompt_refinement.py  single_sample_constraint_refiner.py
evaluation/helpers/: common_args.py  constraint_utils.py  evaluation_utils.py  ranking_utils.py  refiner_utils.py
notebooks/: agg_reddit.ipynb  dtale_llm_eval.ipynb  llm_extract_test.ipynb  llm_rank_test.ipynb  parse_reddit.ipynb  reddit.ipynb  test_teacher_prompt.ipynb  ytdist.ipynb
prompts/: README.md  judge_base.txt
prompts/all_in_one/: v0.txt  v1.txt  v2.txt  v3.txt  v4.txt  v5.txt  v6.txt  v7.txt  v8.txt  v9.txt
prompts/inference/: v0.txt  v1.txt
prompts/intent_only/: v0.txt  v1.txt  v2.txt  v3.txt  v4.txt  v5.txt  v6.txt  v7.txt
prompts/koa_only/: v0.txt  v1.txt  v2.txt  v3.txt  v5.txt
prompts/separation/: v0.txt
scripts/data_preparation/: generate_user_context_script.py
scripts/data_preparation/helpers/: data_loading.py
scripts/evaluation/: config.py  llm_rank_benchmark.py  prompt_adherence.py
scripts/evaluation/helpers/: constraint_utils.py  evaluation_utils.py  filename_utils.py  ranking_utils.py  refiner_utils.py
src/user_embeddings/: main.py
src/user_embeddings/prompts/all_in_one/: v0.txt  v1.txt
src/user_embeddings/prompts/inference/: v0.txt  v1.txt
src/user_embeddings/prompts/intent_only/: v0.txt
src/user_embeddings/prompts/separation/: v0.txt
src/user_embeddings/utils/: dask_helpers.py  dask_processing.py  get_gemini_embedding.py  get_text_completion.py  parsing.py  reddit_helpers.py  teacher_prompt.py  token_estimates.py  zst_io.py
src/user_embeddings/utils/data_loading/: dask_helpers.py  dask_processing.py  reddit_helpers.py  zst_io.py
tests/: evaluate_llm_outputs.py  test_dask_processing.py  test_helpers.py
tests/helpers/: __init__.py  data_loading.py
utils/: dask_processing.py  get_text_completion.py  zst_io.py
(+14 files in other folders)
