[project]
name = "user-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "dtale>=3.17.0",
    "faiss-cpu>=1.10.0",
    "google-genai>=1.10.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "json-repair>=0.41.0",
    "kaleido==0.2.1",
    "nbformat>=5.10.4",
    "openai>=1.73.0",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.2",
]
